Fix z-index on toggle

--- a/_assets/stylesheets/custom.less
+++ b/_assets/stylesheets/custom.less
@@ -16,6 +16,7 @@
         border-radius: 0;
         -webkit-border-radius: 0px;
         -moz-border-radius: 0px;
+        z-index: 9999;
     } 
     .icon-bar {
         border-radius: 0;
